Fix layout problem with add super admin

--- a/src/Componants/NavBar/NavBar.css
+++ b/src/Componants/NavBar/NavBar.css
@@ -1,6 +1,3 @@
-body{
-    background: rgb(195, 194, 194);
-}
 a:hover {
     text-decoration: none;
 }
