--- a/src/Componants/Statistics/Statistics.css
+++ b/src/Componants/Statistics/Statistics.css
@@ -1,5 +1,5 @@
 .dashBoardHeight{
-    min-height: 632px;
+    min-height: 618px;
     background: #dadadb;
 }
 .welcome-back{
